# PalletWH

./: app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
ios/: Podfile
ios/sof_pallet/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/sof_pallet.xcodeproj/: project.pbxproj
ios/sof_pallet.xcworkspace/: contents.xcworkspacedata
modules/qr-code-image-scan/: QrCodeImageScan.podspec  package.json
modules/qr-code-image-scan/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
modules/qr-code-image-scan/android/src/main/: AndroidManifest.xml
modules/qr-code-image-scan/android/src/main/java/com/qrcodeimagescan/: QrCodeImageScanModule.kt  QrCodeImageScanPackage.kt
modules/qr-code-image-scan/cpp/: react-native-qr-code-image-scan.cpp  react-native-qr-code-image-scan.h
modules/qr-code-image-scan/ios/: QrCodeImageScan.h  QrCodeImageScan.mm
modules/qr-code-image-scan/src/: index.tsx  (+1 more)
src/: App.tsx
src/assets/: api-urls.js  constants.js  httpRequest.js
src/components/: CustomHeader.jsx  CustomHeader1.jsx  QRCodeGenerator.js
src/hook/: use-mock-bluetooth.ts  useDebounce.ts
src/services/: ScaleServices.ts  botrikho.jsx  demhang.jsx  doivitri.jsx  donggoi.jsx  getInfoUser.jsx  layhang.jsx  lenke.jsx  logout.jsx  nhansanpham.jsx  sapxephang.jsx  version.jsx  xulyhang.jsx
src/styles/: ElectronicScaleStyles.ts
src/utils/: httpRequest.ts
src/views/: ElectronicScaleScreens_v2.tsx  HomePallet.jsx  LoginPallet.jsx  ScanScreen.jsx
(+58 files in other folders)
